Fixed umuthan files

--- a/challenges/umuthan-challenge/ctfs/challenge-2/index.html
+++ b/challenges/umuthan-challenge/ctfs/challenge-2/index.html
@@ -1,7 +1,10 @@
 <script>
-window.onload = function() {
-  console.log("Secret Flag Found: FLAG{console_detective}");
-}
+  window.onload = function () {
+    console.log("Welcome to the challenge!");
+    console.log("System Status: Active");
+    console.log("Secret Flag Found: FLAG{console_detective}");
+  };
 </script>
 
-<h1>Open Developer Console</h1>
+<h1>The Whispering Console</h1>
+<p>Find the hidden flag.</p>
