--- a/challenges/umuthan-challenge/ctfs/challenge-7/index.html
+++ b/challenges/umuthan-challenge/ctfs/challenge-7/index.html
@@ -1,3 +1,6 @@
+<h1>The Unclickable Button</h1>
+<p>Find the hidden flag.</p>
+
 <button disabled onclick="alert('FLAG{button_unlocked}')">
-Claim Flag
+  Claim Flag
 </button>
