--- a/challenges/umuthan-challenge/ctfs/challenge-8/index.html
+++ b/challenges/umuthan-challenge/ctfs/challenge-8/index.html
@@ -1,3 +1,6 @@
 <script>
-fetch('/challenge-assets/network-08/data.json');
+fetch('./data.json');
 </script>
+
+<h1>Hidden Requests</h1>
+<p>Find the hidden flag.</p>
