--- a/challenges/umuthan-challenge/ctfs/challenge-1/index.html
+++ b/challenges/umuthan-challenge/ctfs/challenge-1/index.html
@@ -1,8 +1,22 @@
 <style>
   body { background-color: #f0f0f0; }
-  .content { color: #333; }
+  .content { color: #333; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; }
+  .card {
+    background: #fff;
+    border: 1px solid #e6e6e6;
+    border-radius: 14px;
+    padding: 18px;
+    max-width: 820px;
+    box-shadow: 0 6px 18px rgba(0,0,0,.06);
+    margin-top: 14px;
+  }
 
   /* FLAG{web_inspect_pro} */
 </style>
 
-<h1>Welcome to the challenge</h1>
+<div class="content">
+  <h1>Hidden in Plain Sight</h1>
+  <div class="card">
+    <p>Find the hidden flag.</p>
+  </div>
+</div>
