--- a/challenges/umuthan-challenge/ctfs/challenge-6/index.html
+++ b/challenges/umuthan-challenge/ctfs/challenge-6/index.html
@@ -1,3 +1,6 @@
 <script>
-localStorage.setItem("secret_vault", "FLAG{storage_is_not_secure}");
+  localStorage.setItem("secret_vault", "FLAG{storage_is_not_secure}");
 </script>
+
+<h1>Forgotten Memory</h1>
+<p>Find the hidden flag.</p>
